fix:修复linux下的编译错误
1.正确大小写
2.预编译时导入正确的头文件

Signed-off-by: xpsviewer <dengxionghui@hotmail.com>

--- a/client/makefile
+++ b/client/makefile
@@ -4,7 +4,7 @@ main.out: makefile main.o logic.h logic.o const.h playerAI.h playerAI.cpp jsoncp
 ifeq ($(OS),Windows_NT)
 	g++ main.o logic.o playerAI.cpp log/log.h log/log.cpp jsoncpp/jsoncpp.cpp geometry.o -o main.out -D_GLIBCXX_USE_CXX11_ABI=0 -static-libstdc++ -lwsock32 -std=c++11
 else
-	g++ main.o logic.o playerAI.cpp log/Log.h log/Log.cpp jsoncpp/jsoncpp.cpp geometry.o -o main.out -D_GLIBCXX_USE_CXX11_ABI=0 -static-libstdc++ -std=c++11 -pthread
+	g++ main.o logic.o playerAI.cpp log/log.h log/log.cpp jsoncpp/jsoncpp.cpp geometry.o -o main.out -D_GLIBCXX_USE_CXX11_ABI=0 -static-libstdc++ -std=c++11 -pthread
 endif
 
 logic.o: makefile const.h playerAI.h geometry.h logic.h jsoncpp/json/json-forwards.h jsoncpp/json/json.h logic.cpp 
